--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>Thiệp Mời Dự Lễ Tốt Nghiệp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="icon" type="image/png" href="d61768e7-2179-47b7-b9fc-31dea94bc22f.png">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Quicksand&display=swap');
 
