--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -173,7 +172,7 @@
 	<div id="intro-screen">
 		<div class="intro-content">
 		🎓 <br />
-    <strong>Chào mừng bạn đến với buổi lễ tốt nghiệp<br/>Nguyễn Văn Tiến</strong>
+    <strong>Chào mừng bạn đến với thư mời tốt nghiệp<br/>Nguyễn Văn Tiến</strong>
 		</div>
 	</div>
 <!-- Container chứa iframe nhạc -->
