--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <strong>Trân trọng kính mời bạn đến dự buổi lễ tốt nghiệp.</strong><br/>
 	<br/>
       🗓 <strong>Thứ Bảy, 13:00 – 02.08.2025</strong><br/>
-      📍 <strong>Đại học An Giang</strong><br/>
+      📍 <strong>Hội trường 600, Đại học An Giang</strong><br/>
 	  <br/>
 	  Nếu bạn lạc đường có thể gọi sdt bên dưới nhe <br/>
 		<strong>📱Zalo/SĐT: 0911 378 641</strong>
