--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
     <div style="margin-bottom: 20px;">
       <p style="font-weight: 600;">📸 Bạn có thể đến để chụp với tui tấm ảnh không?</p>
       <label><input type="radio" name="Chụp ảnh" value="Có" required> Có chớ. 	</label><br/>
-      <label><input type="radio" name="Chụp ảnh" value="Không"> Hông được ròi, hẹn khi khác nhe.</label>
+      <label><input type="radio" name="Chụp ảnh" value="Không"> Hôm đấy tui bận ròi, nên gửi lời chúc nha.</label>
     </div>
 
     <div style="margin-bottom: 20px;">
