--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Thiệp Mời Dự Lễ Tốt Nghiệp</title>
+  <title>Thư Mời Dự Lễ Tốt Nghiệp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
